Provide vertical padding to the RenderTexts used in suggestions.

Where possible, RenderText uses this additional space to vertically
center the cap height of the font instead of centering the entire font.
All vertical padding was taken away in http://crrev.com/467038 which
caused a vertical alignment regression. This CL restores some padding in
a way that still works with the goal of the earlier change (to have
different spacing between multi-line suggestions than between
suggestions).

BUG=723984

Review-Url: https://codereview.chromium.org/2936533004
Cr-Commit-Position: refs/heads/master@{#480047}

Former-commit-id: c7b5ef1e2bd9deb076af700de566211e4cfa7628